tests/baselines/reference/parserErrorRecoveryArrayLiteralExpression3.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrayLiteralExpressions/parserErrorRecoveryArrayLiteralExpression3.ts (2 errors) ====
    
    var texCoords = [2, 2, 0.5000001192092895, 0.8749999 ; 403953552, 0.5000001192092895, 0.8749999403953552];
                                                         ~
!!! error TS1005: ',' expected.
                                                                                                            ~
!!! error TS1005: ';' expected.
    